--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
 							
 					</div>
 				</div>
-				<p class="footer">© 2013-2021 XiaoDao. All Rights Reserved</p>
+				<p class="footer">© 2022 114zyw.cn  All Rights Reserved</p>
 			</div>	
             <ul class="bg-bubbles">
                 <li></li>
